# TariffScraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrape.py
src/tariff_scraper/: models.py
src/tariff_scraper/scrapers/: base.py  canadian.py
src/tariff_scraper/utils/: logging.py
